2010-10-01 arne

	* rewrite implementation for CView attributes to use std::map instead of a linked list
	* some fixes and enhancements from Vítězslav Kot
	* the zoom modifier and default value modifier can now be set with CControl::kZoomModifier and CControl::kDefaultValueModifier
	* add possibility to load bitmaps from absolute paths via IPlatformBitmap
	* fix non visible textedit field with Direct2D (because of not using WS_EX_COMPOSITED)

2010-09-25 arne

	* fix Direct2D issues after installing IE 9 Beta (the new Direct2D version does not like to draw into WS_EX_COMPOSITED windows)

2010-09-23 arne

	* workaround bug on Mac OS X that PNG images are always decoded when drawn

2010-09-10 arne

	* add CBitmapPixelAccess class
	* add support for multi-line tooltips for Cocoa and Windows
	* fix a crash when CFrame is closed and a modal view was set and an animation was used on this modal view

2010-09-03 arne

	* add isControlDefaultButton(..) to VSTGUIEditorInterface to customize the buttons which act as setting the default value of controls
	* removed custom bitmap reader interface

2010-08-04 arne

	* quartz: draw bitmaps on pixel boundaries
	* combine D2DBitmap and D2DOffscreenBitmap

2010-07-10 arne

	* fix invisible state inconsistency of CViewContainer children
	* send key events only to mouse enabled views
	* move CGraphicsPath creation into CDrawContext
	* move CGraphicsPath draw methods into CDrawContext

2010-06-30 arne

	* added ViewIterator and ReverseViewIterator classes, so that iterating over CViewContainer children are not that expensive
	* fix modal view handling
	* fix font creation bug with GDI+ when combining multiple font styles

2010-06-25 arne

	* Mac 64 bit AEffGUIEditor implementation
	* Build 32/64 bit universal binary for tutorial project
	* fix focus issues with Cocoa and text edit fields
	* fix bugs in CVUMeter

2010-06-08 arne

	* added CFontChooser class
	* added GenericStringListDataBrowserSource class